Fix layout issues on smaller screens

--- a/app/content/styles/components/_searchbox.scss
+++ b/app/content/styles/components/_searchbox.scss
@@ -3,11 +3,7 @@
 }
 
 .search-box {
-  padding: 1rem;
-
-  .tutorial {
-    color: #777;
-  }
+  padding: 1rem 0;
 
   .search-input input {
     width: 100%;
