--- a/app/content/styles/layout/_grid.scss
+++ b/app/content/styles/layout/_grid.scss
@@ -27,18 +27,18 @@ html {
 }
 
 .column {
-  margin-bottom: 1.5rem;
+  /*margin-bottom: 1.5rem;*/
   @media #{$small-desktop} {
       float: left;
       margin: 0;
       padding-left: 1rem;
       padding-right: 1rem;
+
+      &.full { width: 100%; }
+      &.two-thirds { width: 66.7%; }
+      &.half { width: 50%; }
+      &.third { width: 33.3%; }
+      &.fourth { width: 25%; }
+      &.flow-opposite { float: right; }
   }
 }
-
-.column.full { width: 100%; }
-.column.two-thirds { width: 66.7%; }
-.column.half { width: 50%; }
-.column.third { width: 33.3%; }
-.column.fourth { width: 25%; }
-.column.flow-opposite { float: right; }
