--- a/app/content/styles/layout/_typography.scss
+++ b/app/content/styles/layout/_typography.scss
@@ -26,8 +26,13 @@ pre.code {
 }
 
 .tutorial {
-    font-size: 0.7rem;
-    color: #777;
+  margin: 0 0 10px 0;
+  color: #777;
+  font-size: 0.7rem;
+
+  @media #{$small-desktop} {
+    margin: 10px 0;
+  }
 }
 
 .faint {
